Add CSS for landing page

--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html>
 <head>
     <title>Documentation</title>
+    <link rel="stylesheet" type="text/css" href="pyshowdown/_static/basic.css" />
+    <link rel="stylesheet" type="text/css" href="pyshowdown/_static/alabaster.css" />
+    <link rel="stylesheet" type="text/css" href="pyshowdown/_static/pygments.css" />
 </head>
 <body>
-    <h1>Project Documentation</h1>
-    <ul>
-        <li><a href="/pyshowdown/">pyshowdown</a></li>
-    </ul>
+    <div class="document">
+        <div class="documentwrapper">
+            <div class="bodywrapper">
+                <div class="body" role="main">
+                    <h1>Project Documentation</h1>
+                    <ul>
+                        <li><a href="/pyshowdown/">pyshowdown</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
